--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Tailwind CDN removed - using PostCSS plugin instead -->
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -24,7 +27,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>UnderGraduation.com</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
